--- a/src/cookie-banner.scss
+++ b/src/cookie-banner.scss
@@ -43,6 +43,8 @@ $buttonBackground: #4299e1;
 }
 
 .cc-revoke {
+    display: none !important;
+
     opacity: 0.7;
     font-size: 14px;
     padding-left: 20px;
