--- a/src/cookie-banner.scss
+++ b/src/cookie-banner.scss
@@ -43,14 +43,25 @@ $buttonBackground: #4299e1;
 }
 
 .cc-revoke {
-    display: none !important;
+    width: 40px;
+    height: 40px;
 
-    opacity: 0.7;
-    font-size: 14px;
-    padding-left: 20px;
-    padding-right: 20px;
+    right: 0;
+    bottom: 0;
+    opacity: .5;
+    padding: 5px;
+    z-index: 999999;
+    position: fixed;
+
+    transition-property: opacity;
+    transition-duration: 300ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    svg {
+        pointer-events: none;
+    }
 
     &:hover {
-        text-decoration: none;
+        opacity: 1;
     }
 }
