--- a/src/cookie-banner.scss
+++ b/src/cookie-banner.scss
@@ -46,7 +46,7 @@ $buttonBackground: #4299e1;
     width: 40px;
     height: 40px;
 
-    right: 0;
+    left: 0;
     bottom: 0;
     opacity: .5;
     padding: 5px;
